WPF: Added all colors to SongGridViewTheme; now using the right colors everywhere. SongGridView can now start playback and receives update of currently playing song. Fixed bugs in GraphicsContextWrapper (rendering text in a rectangle).

--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -638,7 +638,7 @@
                                 </Grid>
                             </Grid>
                             <WindowsFormsHost Grid.Row="1">
-                                <wc:SongGridView x:Name="gridViewSongs" OnSelectedIndexChanged="gridViewSongs_OnOnSelectedIndexChanged" />
+                                <wc:SongGridView x:Name="gridViewSongs" />
                             </WindowsFormsHost>
                             <controls:SongGridView Grid.Row="2" x:Name="gridViewSongsNew" />
                         </Grid>
