--- a/MPfm/MPfm.WPF/Themes/Generic.xaml
+++ b/MPfm/MPfm.WPF/Themes/Generic.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MPfm.WPF"
     xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls">
-    <Style TargetType="{x:Type controls:MPfmButton}">
+    <!--<Style TargetType="{x:Type controls:MPfmButton}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:MPfmButton}">
@@ -14,5 +14,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 </ResourceDictionary>
