--- a/MPfm/MPfm.WPF/Classes/Windows/PreferencesWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/PreferencesWindow.xaml
@@ -17,40 +17,40 @@
             <Button x:Name="btnTabGeneral" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
                 <StackPanel Orientation="Horizontal" Margin="0">
                     <Image Source="/Resources/Images/Buttons/preferences.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">General</Label>
+                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">General</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="btnTabAudio" Click="btnTab_OnClick" Style="{StaticResource TabButton}" Margin="0">
                 <StackPanel Orientation="Horizontal" Margin="0">
                     <Image Source="/Resources/Images/Buttons/audio.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Audio</Label>
+                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Audio</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="btnTabLibrary" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
                 <StackPanel Orientation="Horizontal" Margin="0">
                     <Image Source="/Resources/Images/Buttons/library.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Library</Label>
+                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Library</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="btnTabCloud" Click="btnTab_OnClick" Style="{StaticResource TabButton}">
                 <StackPanel Orientation="Horizontal" Margin="0">
                     <Image Source="/Resources/Images/Buttons/cloud.png" Stretch="None" />
-                    <Label FontSize="13" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Cloud</Label>
+                    <Label FontSize="13" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" Foreground="White" Margin="4,0,0,0">Cloud</Label>
                 </StackPanel>
             </Button>
         </StackPanel>
-        <Label Grid.Row="1" x:Name="lblTitle" Content="General Preferences" Background="#FF455865" Foreground="White" FontSize="16" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+        <Label Grid.Row="1" x:Name="lblTitle" Content="General Preferences" Background="#FF455865" Foreground="White" FontSize="16" FontFamily="/Resources/Fonts/#Roboto Regular" />
         <StackPanel Grid.Row="2" x:Name="gridAudio" Visibility="Hidden">
             <StackPanel Background="White" Margin="8,8,8,0">
-                <Label Content="Output" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Output" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="TBD" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
             </StackPanel>
             <StackPanel Background="White" Margin="8,8,8,0" Orientation="Vertical">
-                <Label Content="Mixer" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Mixer" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="TBD" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
             </StackPanel>
             <StackPanel Background="White" Margin="8,8,8,0" Orientation="Vertical">
-                <Label Content="Status" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Status" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="TBD" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
             </StackPanel>
         </StackPanel>
@@ -61,7 +61,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="250" />
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Content="Folders" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Grid.Row="0" Content="Folders" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <Grid Grid.Row="1" Margin="2,2,2,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -108,11 +108,11 @@
         </StackPanel>
         <StackPanel Grid.Row="2" x:Name="gridCloud" Visibility="Hidden">
             <!--<StackPanel Background="White" Margin="8,8,8,0">
-                <Label Content="General" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="General" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="Enable synchronization" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
             </StackPanel>-->
             <StackPanel Background="White" Margin="8,8,8,0" Orientation="Vertical">
-                <Label Content="Dropbox" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Dropbox" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <StackPanel Orientation="Horizontal">
                     <Button Margin="0" HorizontalAlignment="Left" FontSize="11" FontFamily="/Resources/Fonts/#Roboto Regular" Click="btnDropboxLoginLogout_OnClick">
                         <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
@@ -129,7 +129,7 @@
         </StackPanel>
         <StackPanel Grid.Row="2" x:Name="gridGeneral" Visibility="Hidden">
             <StackPanel Background="White" Margin="8,8,8,0">
-                <Label Content="Update Frequency" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Update Frequency" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Song position:" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
                     <Slider Width="200" Margin="4" />
@@ -146,13 +146,13 @@
                 </StackPanel>
             </StackPanel>
             <StackPanel Background="White" Margin="8,8,8,0">
-                <Label Content="User Interface" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="User Interface" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="Show tooltips" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="4" Content="Show application in system tray" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <CheckBox VerticalContentAlignment="Center" Margin="24,4,4,4" Content="Minimize in system tray when the app is closed" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
             </StackPanel>
             <StackPanel Background="White" Margin="8,8,8,0">
-                <Label Content="Peak Files" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                <Label Content="Peak Files" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <RadioButton x:Name="radioPeakFiles_UseDefaultDirectory" VerticalContentAlignment="Center" Margin="4" Content="Use default directory ([dir])" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <RadioButton x:Name="radioPeakFiles_UseCustomDirectory" VerticalContentAlignment="Center" Margin="4" Content="Use custom directory:" Foreground="Black" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" />
                 <StackPanel Orientation="Vertical">
